# Project

./: .gitignore
EDRH_m/: CMakeLists.txt  CMakeLists.txt.user.2620ff2  GALAXY_MAP_PERFORMANCE_UPGRADE.md  Supabase.txt  claimmanager.cpp  claimmanager.h  config.json  configmanager.cpp  configmanager.h  context.txt  edrhcontroller.cpp  edrhcontroller.h  galaxymaprenderer.cpp  galaxymaprenderer.h  imageloader.cpp  imageloader.h  journalmonitor.cpp  journalmonitor.h  main.cpp  supabaseclient.cpp  supabaseclient.h  v1.4incomplete.py
EDRH_m/qml/: FilterManager.qml  FloatingPanel.qml  GalaxyActionsCard.qml  GalaxyMapTab.qml  ImagePicker.qml  QuickActionsCard.qml  SystemViewPopup_Original.qml  Theme.qml  desktop.ini  main.qml  qmldir
Echo/: actions.py  agent.py  brain_wrapper.py  current_model.txt  daydream.py  echo_qt.py  llm.py  logger.py  main.py  memory.json  memory.py  mood.py  policy.py  profile_manager.py  settings_dialog.py  tool_spec.py  ui_bubbles.py
Echo/sandbox/scratchpad/: example_code.py
Echo/scratchpad/: internal_thoughts.txt
Echo/scratchpad/scratchpad/: INDEX.md
Echo/scratchpad/scratchpad/autonotes/2025-08-16/: auto_note_141927.md  auto_note_142012.md  auto_note_142057.md  auto_note_144429.md  auto_note_144508.md  auto_note_144559.md  auto_note_144639.md  auto_note_144730.md
Phase1Echo/: actions.py  agent.py  brain_wrapper.py  config.py  llm.py  memory.json  memory.py  memory_tick.py  mood.py  popup_manager.py  requirements.txt  theme.py  ui.py  ui_bubbles.py
Phase1Echo/sandbox/scratchpad/: secret.txt
